// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookmarkButton should render bookmarked 1`] = `
<Button
  aria-pressed={false}
  className="button bookmarkFilled"
  color="hyperlink"
  component="button"
  onClick={[Function]}
  role="button"
  tabIndex={0}
>
  <BookmarkIcon
    isBookmarked={true}
    onBookmarkClick={[Function]}
  />
</Button>
`;

exports[`BookmarkButton should render with class 1`] = `
<Button
  aria-pressed={false}
  className="button aClassyClass"
  color="hyperlink"
  component="button"
  onClick={[Function]}
  role="button"
  tabIndex={0}
>
  <BookmarkIcon
    onBookmarkClick={[Function]}
  />
</Button>
`;

exports[`BookmarkButton should render with default props 1`] = `
<Button
  aria-pressed={false}
  className="button"
  color="hyperlink"
  component="button"
  onClick={[Function]}
  role="button"
  tabIndex={0}
>
  <BookmarkIcon
    onBookmarkClick={[Function]}
  />
</Button>
`;
